--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,7 @@ COMBINED ELEMENTS -------------------
 /* homepage */
 
 .main-banner {
-    display: flex;
+    display: block;
     height: auto;
     background: lightgrey;
     margin-bottom: 5rem;
@@ -421,3 +421,38 @@ COMBINED ELEMENTS -------------------
 .product-overview img {
     width: 100%
 }
+
+
+/*Grid Test*/
+
+#product-categories-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: space-around;
+    padding-left: 10rem;
+    padding-right: 10rem;
+
+}
+
+#product-categories-container img{
+    max-width: 50%;
+}
+
+.product-categories-featured{
+    background-color: aliceblue;
+    text-align: center;
+}
+
+.product-categories-featured img{
+    max-width: 100%;
+}
+
+.product-categories-secondary{
+    flex-direction: column;
+    background-color: aliceblue; 
+    text-align: center;
+}
+
+
