--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ margin-top: 5rem;
 */
 
 section h3 {
-    margin-bottom: 0;
+    margin: 0;
 }
 
 section p {
@@ -64,7 +64,7 @@ INTERACTIVE ELEMENTS -------------------
 /* Styling for the navigation button */
 
 nav ul {
-    margin: 0;
+    margin: 0 1rem;
     padding: 0;
 }
 
@@ -73,6 +73,10 @@ nav li {
     margin: 0;
     background: #3057D5;
     padding: 1rem;
+}
+
+nav li:nth-child(4) {
+    font-size: 1.75rem;
 }
 
 .button-nav {
@@ -97,6 +101,10 @@ nav li {
     border-bottom: 2px solid white;
 }
 
+nav li:nth-child(4) .button-nav:hover:before {
+    border: none;
+}
+
 /* Styling for Product Information Accordian */
 
 code span {
@@ -108,12 +116,14 @@ code span {
     background-color: #4B83AD;
     color: white;
     cursor: pointer;
-    padding: 18px;
+    height: 2.75rem;
+    padding: 1rem;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 1rem;
+    text-transform: uppercase;
     transition: color 0.75s, background-color 0.75s;
 }
 
@@ -134,15 +144,23 @@ code span {
 }
 
 .product-info-panel {
-    padding: 0 1.125rem;
     background-color: white;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
 }
 
-.product-info-panel p {
-    padding: 1rem 0;
+.product-overview .product-info-panel p {
+    padding: 1rem 0 1rem 3rem;
+    margin: 0;
+    border-bottom: 1px solid black;
+    display: flex;
+    position: relative;
+}
+
+.product-info-panel p span:last-child{
+    position: absolute;
+    left: 70%;
 }
 
 
@@ -168,7 +186,7 @@ code span {
     left: 0;
     z-index: -1;
     background: #3057D5;
-    transition: height 0.3s;
+    transition: height 0.5s;
 }
 
 .cta-button:hover {
@@ -217,12 +235,14 @@ h3 {
     font-size: 1.75rem;
     color: #102c34;
     font-weight: 100;
+    margin: 0;
 }
 
 /* Styling for bulleted lists */
 
 ul {
     list-style: square;
+    -webkit-padding-start: 1.25rem;
 }
 
 /* 
@@ -364,10 +384,10 @@ COMBINED ELEMENTS -------------------
 /* homepage */
 
 .main-banner {
-    display: flex;
+    /*    display: flex;*/
     height: auto;
     background: lightgrey;
-    margin-bottom: 5rem;
+    height: 31rem;
 }
 
 .hero-top-text {
@@ -405,12 +425,26 @@ COMBINED ELEMENTS -------------------
 
 /* product page */
 
-.product-overview {
-    margin: 0 4rem;
+
+.product-page .main-banner h1, .product-page .main-banner h2 {
+    display: block;
+    flex-wrap: wrap;
+    width: fit-content;
+    position: relative;
+    margin: 0;
+    top: 3rem;
+    left: 2rem;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 1rem;
 }
 
-.product-overview h1,
-.product-overview p {
+.product-page section:not(:first-child) {
+    margin: 5rem 4rem;
+}
+
+.product-page h1, .product-page h2,
+.product-page p {
     text-align: center;
 }
 
@@ -418,6 +452,74 @@ COMBINED ELEMENTS -------------------
     margin-bottom: 5rem;
 }
 
-.product-overview img {
-    width: 100%
+.product-view {
+    width: 100%;
+    height: 33rem;
+}
+
+.smaller-product-views {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+.smaller-product-views img {
+    display: flex;
+    width: 20%;
+    height: 20%;
+    flex: 0 1 auto;
+}
+
+.ideal-for {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.game-logo {
+    width: 15%;
+    height: 15%;
+    flex: 0 1 auto;
+}
+
+.subtotal {
+    position: relative;
+    width: 100%;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    color: #102c34;
+}
+
+.subtotal p {
+    text-align: right;
+    margin-bottom: 3rem;
+}
+
+.product-page-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.key-point:first-of-type {
+    margin-top: 3rem;
+}
+
+.key-point {
+    margin-top: 5rem
+}
+
+.key-point-img {
+    width: 100%;
+    height: 15rem;
+}
+
+@media (max-width: 767px) {
+    .ideal-for {
+        margin-top: 5rem;
+    }
+
+    .key-point-img {
+        margin-top: 2rem;
+    }
 }
