--- a/css/main.css
+++ b/css/main.css
@@ -153,7 +153,7 @@ code span {
 .product-overview .product-info-panel p {
     padding: 1rem 0 1rem 3rem;
     margin: 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #102c34;
     display: flex;
     position: relative;
 }
@@ -332,7 +332,7 @@ COMBINED ELEMENTS -------------------
 .placeholder {
     display: block;
     width: 100%;
-    border: 1px solid black;
+    border: 1px solid #102c34;
 }
 
 
