--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,10 @@ nav li:nth-child(4) .button-nav:hover:before {
     border: none;
 }
 
+nav img {
+    width: 1.5rem;
+}
+
 /* Styling for Product Information Accordian */
 
 code span {
